// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form snapshot darkFalse 1`] = `
<form
  className="submitForm"
  onSubmit={[Function]}
>
  <input
    className="textInput"
    required={true}
    type="text"
  />
  <button
    className="submitButton"
    type="submit"
  >
    <img
      alt=""
      className="searchIcon"
      src="search.svg"
    />
  </button>
</form>
`;

exports[`Form snapshot darkTrue 1`] = `
<form
  className="submitForm"
  onSubmit={[Function]}
>
  <input
    className="textInput textInputDark"
    required={true}
    type="text"
  />
  <button
    className="submitButton"
    type="submit"
  >
    <img
      alt=""
      className="searchIcon"
      src="search.svg"
    />
  </button>
</form>
`;

exports[`Item snapshot darkFalse 1`] = `
<li
  className="item"
>
  <a
    className="title"
    href="link"
    rel="noopener noreferrer"
    target="_blank"
  >
    title
  </a>
  <div
    className="snippet"
  >
    snippet
  </div>
</li>
`;

exports[`Item snapshot darkTrue 1`] = `
<li
  className="item"
>
  <a
    className="title"
    href="link"
    rel="noopener noreferrer"
    target="_blank"
  >
    title
  </a>
  <div
    className="snippet snippetDark"
  >
    snippet
  </div>
</li>
`;

exports[`Toggle snapshot 1`] = `
<ToggleTheme
  switchTheme={[MockFunction]}
>
  <label
    className="toggleTheme"
  >
    <Toggle
      defaultChecked={false}
      icons={false}
      onChange={[Function]}
    >
      <div
        className="react-toggle"
        onClick={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="react-toggle-track"
        >
          <div
            className="react-toggle-track-check"
          />
          <div
            className="react-toggle-track-x"
          />
        </div>
        <div
          className="react-toggle-thumb"
        />
        <input
          className="react-toggle-screenreader-only"
          defaultChecked={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          type="checkbox"
        />
      </div>
    </Toggle>
  </label>
</ToggleTheme>
`;

exports[`shallow App snapshot 1`] = `
<div
  className="app"
>
  <ToggleTheme
    darkTheme={false}
    switchTheme={[Function]}
  />
  <div
    className="logo"
  >
    wiki search
  </div>
  <Form
    ajaxErrorState={[Function]}
    darkTheme={false}
    requests={Array []}
    setDataState={[Function]}
    setRequests={[Function]}
    setValueState={[Function]}
    value=""
  />
  <Requests
    requests={Array []}
    setValueState={[Function]}
  />
</div>
`;
